Changes for R-package EMMAgeo

Version 0.9.7
  - 

Version 0.9.6
	- GUI functionality corrected for other platforms
	- classunit implementation also available for compact protocol
	- plot output polished
	- License and Readme information added

Version 0.9.4
	- parameter name lw changed to l in all functions
	- Function GUI() extended
	- Function get.l.opt() added
	- Function get.l() added
	- Function get.limits() added
	- Function get.q() added
	- Function model.em() added
	- Evaluation outpout of EMMA() extended
	- Axes labels of EMMA() changed
	- function create.sample() removed
	- example data set changed

Version 0.9.3
	- Function GUI() added
	- Standard EMMA() output significantly extended
	- Multicore option added to test.parameters()
	- Output of test.robustness() extended by mEt, mEm, mEn, mRm, mRn
	- All code/documentation changed to Roxygen
	- Some rephrasing of function documentations
	- Code optimisation (parallelisation instead of loops)
	- EM ID assignment bug fixed
	- Bug removed (twisted plots of clos vs. rows)
	- Bug in X_m calculation fixed, now matrix is rescaled
	- Bug in EMMA() removed (wrongly set bracket in Vqs calculation)
	- Minor bug fixes

Version 0.9.2
	- Function create.sample() was added
	- Example data was enlarged to facilitate function examples
	- Function lw.max() was added

Version 0.9.1 (2013-09-13)
	- Function mix.EM(): as.numeric() added to proportion parameter, to also support matrices as input
	- Function EMMA(), test.lw(), test.L(): weight quantile calulation implemented as sapply() rather than separate function definition
	- Function EMMA(), test.lw(), test.L(): parameters ls, Vqr, Vqn, Vqsn corrected for geometry (now: ls[2,m], Vq...[q,m])
	- Function EMMA(): two redundant but convenient function values added: $loadings and $scores
	- Function test.parameters(): y-axes limits set automatically to prevent false display of data
	- Function test.lw(): test for valid EMMA()$Mqs matrix added